--- a/frontend/src/assets/css/responsive.scss
+++ b/frontend/src/assets/css/responsive.scss
@@ -6,8 +6,8 @@ $text-color-one:  #000000;
 $text-color-two : #2c2d2f;
 
 /*--- Font Family ---*/
-$primary-font : 'Julius Sans One';
-$secondary-font : 'Julius Sans One';
+$primary-font : 'raleway';
+$secondary-font : 'raleway';
 $tertiary-colo : serif;
 
 
