--- a/frontend/src/assets/css/style.scss
+++ b/frontend/src/assets/css/style.scss
@@ -35,7 +35,7 @@ Last update :
 */  
 
 // GOOGLE FONT
-@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 /*====================
     1. Global CSS
@@ -49,8 +49,8 @@ $text-color-one:  #262339;
 $text-color-two : #737679;
 
 /*--- Font Family ---*/
-$primary-font : 'Julius Sans One';
-$secondary-font : 'Julius Sans One';
+$primary-font : 'raleway';
+$secondary-font : 'raleway';
 $tertiary-colo : serif;
 
 * {
